# Module-0

./: .pre-commit-config.yaml  .replit  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements.extra.txt  requirements.txt  run_tests.py  setup.cfg  setup.py
.github/workflows/: classroom.yml
minitorch/: __init__.py  datasets.py  module.py  operators.py  testing.py  util.py
project/: app.py  datasets.py  graph_builder.py  math_interface.py  module_interface.py  run_scalar.py  run_torch.py
project/interface/: plots.py  streamlit_utils.py  train.py
tests/: __init__.py  strategies.py  test_module.py  test_operators.py
