[tool]
[tool.poetry]
name = "minitorch"
version = "0.0.0"
description = ""
[tool.poetry.dependencies]
python = "*"
black = "==19.10b0"
colorama = "==0.4.3"
flake8 = "==3.8.3"
hypothesis = "==4.38"
numba = "==0.49"
numpy = "==1.19.1"
pep8-naming = "==0.11.1"
pytest = "==6.0.1"
pytest-runner = "==5.2"
